--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
     <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-    <script src="./redux.js"></script>
-    <script src="./index.js"></script>
+    <script src="./js/redux.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 <body>
-    <script>
-        // $.getJSON(
-        //     'https://data-live.flightradar24.com/zones/fcgi/feed.js?bounds=56.84,55.27,33.48,41.48',
-        //     (data) => console.log(data) 
-        // );
-    </script>
     
 </body>
 </html>
