--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+    <script src="./js/jQuery.js"></script>
     <script src="./js/redux.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/script.js"></script>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div id="table" class="table">
+        </div>
+    </div>
 </body>
+
 </html>
