remove jquery library

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/jQuery.js"></script>
-    <script src="./js/redux.js"></script>
+    <script src="./js/pocketRedux.js"></script>
     <script src="./js/script.js"></script>
 </head>
 
 <body>
+    <div class="off-css">
+        <button>отключить стили</button>
+        <button>изменить сортировку</button>
+    </div>
     <div class="container">
         <div id="table" class="table">
         </div>
