sorting and styles actions

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="off-css">
-        <button>отключить стили</button>
-        <button>изменить сортировку</button>
+        <button id="stylesButton" onClick="stylesButtonAction()">отключить стили</button>
+        <button id="sortingButton" onClick="sortModeButtonAction()">изменить сортировку</button>
     </div>
     <div class="container">
         <div id="table" class="table">
